--- a/docs/api-details/regions.mdx
+++ b/docs/api-details/regions.mdx
@@ -8,7 +8,7 @@ cannot be changed afterwards. Make sure you choose a region that is suitable to 
 | Regions | Data Residency                                     |
 | ------- | -------------------------------------------------- |
 | 🇺🇸 US      | Data stored in United States (Subject to HIPAA) |
-| 🇪🇺 EU      | Data stored in Belgium (Subject to GPDR)        |
+| 🇪🇺 EU      | Data stored in Belgium (Subject to GDPR)        |
 
 Your Junction Org is a **global** resource — you can start with a Team in one region and create more in a different
 region as you expand.
