--- a/docs/api-reference/horizon-ai/aggregation/overview.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/overview.mdx
@@ -1,3 +1,8 @@
+---
+title: "Horizon AI Query Overview"
+description: "Learn how Horizon AI Query consolidates wearable data across providers into simple tabular outputs."
+---
+
 import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
 
 <HorizonAIBeta />
