--- a/docs/home/libraries.mdx
+++ b/docs/home/libraries.mdx
@@ -2,7 +2,7 @@
 title: "Libraries"
 ---
 
-We have created a few libraries to help you integrate with the Junction API. We'll continue to add support for more libraries as we add more devices. Email [support@tryvital.io](mailto:support@tryvital.io) for specific library support.
+We have created a few libraries to help you integrate with the Junction API. We'll continue to add support for more libraries as we add more devices. Email [support@junction.com](mailto:support@junction.com) for specific library support.
 
 ### Typed Bindings of Junction API
 
@@ -22,7 +22,7 @@ These typed bindings track the Junction API OpenAPI Schema.
 | [vital-android](https://github.com/tryVital/vital-android)           | Junction Android Client                                 |
 | [vital-flutter](https://github.com/tryVital/vital-flutter)           | Junction Flutter Client                                 |
 | [vital-react-native](https://github.com/tryVital/vital-react-native) | Junction React Native Client                            |
-| [vital-connect](https://github.com/tryVital/vital-connect-rn)        | Whitelabel App using Vital's API                     |
+| [vital-connect](https://github.com/tryVital/vital-connect-rn)        | Whitelabel App using Junction API                     |
 
 ### Web SDK
 
