--- a/docs/home/welcome.mdx
+++ b/docs/home/welcome.mdx
@@ -76,9 +76,9 @@ description: "Here you'll find guides, resources, and references to build using 
     href="/wearables/connecting-providers/introduction"
     horizontal
   >
-    Junction Link enables your users to connect their account with with their
+    Junction Link enables your users to connect their account with their
     wearable data providers. Learn how to integrate the Link Widget for a
-    no-fuzz starter integration.
+    no-fuss starter integration.
   </Card>
   <Card
     title="Junction Link API"
