--- a/docs/lab/overview/introduction.mdx
+++ b/docs/lab/overview/introduction.mdx
@@ -2,11 +2,11 @@
 title: "Introduction"
 ---
 
-Vital's lab test API allows digital health companies to carry out at-home lab testing.
-Companies can use the API to order a variety of tests, using multiple sampling methods.
+Junction's lab test API allows digital health companies to carry out at-home lab testing.
+Companies can use the API to order a variety of tests using multiple sampling methods.
 
-We partner with CLIA and CAP certified labs across the United States that cover a range of different diagnostic tests. For example lipids panels, metabolic profiles, hormone tests and more.
-We collect these test samples via at-home kits, or phlebotomy.
+We partner with CLIA and CAP certified labs across the United States that cover a range of different diagnostic tests, including lipid panels, metabolic profiles, hormone tests, and more.
+We collect these test samples via at-home kits or phlebotomy.
 
 ### Features
 
@@ -18,21 +18,21 @@ What we offer:
 - 50 State Physician network - you can use your own physician if you have one, or we will automatically assign one from our network.
 - Updates throughout the test lifecycle - we automatically send you webhook updates and SMS updates to your patients so that you both never miss an update.
 - Test results: we will update you once the test results are ready. In case of abnormal results, we also provide follow-ups through our Physician network.
-- 1:1 support: after production launch, you will have direct access to Slack and our engineers.
+- 1:1 support: After production launch, you will have direct access to Slack and our engineers.
 
 ### Start integrating
 
-You can sign-up today to our sandbox environment. The [quickstart](/lab/overview/quickstart-api) guide will help you getting from zero to ordering tests in less than 30 minutes\! Once the integration is ready, switching to production will just be a matter of switching API keys.
+You can sign up today for our sandbox environment. The [quickstart](/lab/overview/quickstart) guide will help you go from zero to ordering tests in less than 30 minutes. Once the integration is ready, switching to production will just be a matter of switching API keys.
 
 ### Production launch
 
-As a first step, we need to define what type of testing you want to offer to your users. We will have an introduction call to go over the test, projected volumes, customizations for kits and other questions you might have. Once we have all this information, we will begin setting up the test kits for distribution. Once the integration is complete, you will have access to the dashboard to start ordering tests via our API.
+As a first step, we need to define what type of testing you want to offer to your users. We will have an introduction call to go over the tests, projected volumes, customizations for kits, and other questions you might have. Once we have all this information, we will begin setting up the test kits for distribution. Once the integration is complete, you will have access to the dashboard to start ordering tests via our API.
 
-In [this page](https://tryvital.io/labs), you can check out some examples of the test panels we offer, and book an introductory call with us.
+On [this page](https://junction.com/labs), you can check out some examples of the test panels we offer and book an introductory call with us.
 
 ### Support
 
-We will assist you throughout the whole integration with Vital. After launch, you will have a dedicated account manager with access to Slack, and 1:1 support with our engineers.
+We will assist you throughout the whole integration with Junction. After launch, you will have a dedicated account manager with access to Slack and 1:1 support with our engineers.
 
 ### Coverage
 
@@ -44,5 +44,5 @@ Our lab test API is available throughout the US. This is our current coverage by
 - [On-site collection](/lab/overview/testing-modalities#on-site-collection): In beta testing
 
 <Info>
-  To find out more about our coverage, you can use the [area info endpoint](/api-reference/lab-testing/area-info) - this endpoint takes a zip code and tells whether that area is covered by our service or not. Or you can contact us at [support@tryvital.io](mailto:support@tryvital.io) for more info.
+  To find out more about our coverage, you can use the [area info endpoint](/api-reference/lab-testing/area-info) - this endpoint takes a zip code and tells whether that area is covered by our service or not. Or you can contact us at [support@junction.com](mailto:support@junction.com) for more info.
 </Info>
