--- a/docs/wearables/connecting-providers/introduction.mdx
+++ b/docs/wearables/connecting-providers/introduction.mdx
@@ -4,15 +4,15 @@ title: "Introduction to Link"
 
 import LinkSDKProvider from '/snippets/link-sdk-provider.mdx';
 
-Junction Link enables your users to connect their accounts with [supported cloud-based providers](https://docs.tryvital.io/wearables/providers/introduction)
-to Vital.
+Junction Link enables your users to connect their accounts with [supported cloud-based providers](/wearables/providers/introduction)
+to Junction.
 
 Junction Link is offered in two forms:
 
-* [Junction Link Widget](/wearables/connecting-providers/link_flow) is a web flow hosted by Vital, providing a complete
+* [Junction Link Widget](/wearables/connecting-providers/link_flow) is a web flow hosted by Junction, providing a complete
   provider connection wizard UX that is ready to integrate.
 
-* [Junction Link API](/wearables/connecting-providers/custom_widget) allows you to build your own Link Widget like user experience.
+* [Junction Link API](/wearables/connecting-providers/custom_widget) allows you to build your own Link Widget-like user experience.
 
 
 <LinkSDKProvider />
