--- a/docs/home/getting-support.mdx
+++ b/docs/home/getting-support.mdx
@@ -5,11 +5,10 @@ title: "Getting Support"
 ## Support channels
 
 When you encounter an issue which you cannot figure out, or an unexpected API error, you are
-welcome to get in touch with Vital support through these channels:
+welcome to get in touch with Junction support through these channels:
 
-* Email Support (help@tryvital.io)
-* Vital Slack community support channel (#vital-support)
-* Your dedicated Slack support channel (for Scale plan customers).
+* Email Support (support@junction.com)
+* Your dedicated Slack support channel (for Scale plan customers)
 
 We appreciate as much context as possible when you raise an issue. This helps us understand your
 issue, enabling a quicker investigation turnaround.
@@ -21,19 +20,19 @@ issue, enabling a quicker investigation turnaround.
 | Item                  | Remarks                                    |
 | --------------------- | ------------------------------------------ |
 | Your Junction Team ID    | -                                          |
-| Your Vital region     | US or EU                                   |
-| The Vital User ID     | ...if the issue occurs on a specific user. |
-| The Vital environment | Sandbox, Production or both                |
+| Your Junction region     | US or EU                                   |
+| The Junction User ID     | ...if the issue occurs on a specific user. |
+| The Junction environment | Sandbox, Production or both                |
 
-### Vital Mobile SDK
+### Junction Mobile SDK
 
 | Item               | Remarks                       |
 | ------------------ | ----------------------------- |
-| Vital SDK Platform | Native, React Native, Flutter |
-| Vital SDK Version  | -                             |
+| Junction SDK Platform | Native, React Native, Flutter |
+| Junction SDK Version  | -                             |
 | Device OS          | Android or iOS                |
 | Device OS Version  | -                             |
-| Auth Scheme        | Vital Sign-In Token, or Team API Key |
+| Auth Scheme        | Junction Sign-In Token, or Team API Key |
 
 
 ### A Junction API endpoint
@@ -50,12 +49,12 @@ traceparent: 00-0af7651916cd43dd8448eb211c80319c-b7ad6b7169203331-01
 
 It contains a trace ID that links back to the original API request:
 
-* If you make the API request without a `traceparent` header, Vital's infrastructure
+* If you make the API request without a `traceparent` header, Junction's infrastructure
   assigns a unique trace ID to it on entry.
 
 * If your API request is instrumented using OpenTelemetry, W3C Trace Context or other
   interoperable tools, these tools would inject a `traceparent` header automatically.
-  Vital's infrastructure would adopt the trace ID from your API request.
+  Junction's infrastructure would adopt the trace ID from your API request.
 
 
 ### A wearables provider connection
@@ -64,7 +63,7 @@ Before reporting an issue, we encourage you to try out the following steps:
 
 <Steps>
     <Step title="Check the resource availability" icon="circle-question">
-    The [Get User Connections](https://docs.tryvital.io/api-reference/user/get-users-connected-providers) endpoint
+    The [Get User Connections](/api-reference/user/get-users-connected-providers) endpoint
     reports the resource availability of all the connections. More specifically, it tells you:
 
     1. What resources are available for a given user connection
@@ -72,12 +71,12 @@ Before reporting an issue, we encourage you to try out the following steps:
     </Step>
 
     <Step title="Issues with historical pulls?" icon="clock-rotate-left">
-    If you are having issues with historical data specifically, the [Historical Pull Introspection](https://docs.tryvital.io/api-reference/introspection/historical-pulls) endpoint
+    If you are having issues with historical data specifically, the [Historical Pull Introspection](/api-reference/data/introspection/historical-pulls) endpoint
     provides a track record of historical pulls of all your user connections.
     </Step>
 
     <Step title="Issues with data availability?" icon="sparkles">
-    If you have troubles with data availability in general, the [User Resource Introspection](https://docs.tryvital.io/api-reference/introspection/user-resources) endpoint
+    If you have troubles with data availability in general, the [User Resource Introspection](/api-reference/data/introspection/user-resources) endpoint
     is a live data ingestion record of all your user connections.
     
     <Note>
@@ -88,4 +87,4 @@ Before reporting an issue, we encourage you to try out the following steps:
 </Steps>
 
 If you are not able to diagnose your issue using these tools, feel free to contact
-Vital support for further assistance.
+Junction support for further assistance.
