--- a/docs/home/privacy.mdx
+++ b/docs/home/privacy.mdx
@@ -2,12 +2,12 @@
 title: "Privacy"
 ---
 
-Privacy is at the heart of everything we do at Vital. We are committed to protecting your privacy and your data and have built our service with those values in mind.
+Privacy is at the heart of everything we do at Junction. We are committed to protecting your privacy and your data and have built our service with those values in mind.
 
 To do this we've taken a number of precautions:
 
-1. Users can deregister their device's and delete their data from Vital.
-2. We encrypt all data at REST and in transit. Furthermore, we encrypt the data prior to storing it it in our database. To do this we use **[Evervault](https://evervault.com)**.
+1. Users can deregister their devices and delete their data from Junction.
+2. We encrypt all data at REST and in transit. Furthermore, we encrypt the data prior to storing it in our database. To do this we use **[Evervault](https://evervault.com)**.
 
 ## How this works?
 
